--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -74,6 +74,8 @@
 .blpui-slider-container.vertical-slider .blpui-slider-span.slider-span-active:after
 .blpui-slider-container.horizontal-slider .slider-process
 .blpui-slider-container.horizontal-slider .slider-handle
+.blpui-slider-container.vertical-slider .blpui-slider-span > span
+.draw-full-cntr .count
 	background-color var(--c-accent) !important
 
 .room-bg::after
@@ -103,6 +105,7 @@
 .bilibili-live-player .blpui-btn.text-btn > span
 .bilibili-live-player .blpui-btn.icon-btn > i
 .bilibili-live-player-video-controller-hide-danmaku-container .hide-danmaku-title
+.draw-full-cntr .count
 	color var(--c-white) !important
 
 .gift-info .btn-rule
@@ -121,6 +124,7 @@
 .bilibili-live-player .blpui-btn.icon-btn:hover > i
 .bilibili-live-player .blpui-btn.text-btn:hover > span
 .bilibili-live-player .blpui-btn.text-btn.active > span
+.draw-full-cntr .gift-sender-info span
 	color var(--c-accent) !important
 
 .room-introduction-tags
