--- a/bilibili-lite/src/manga/detail.styl
+++ b/bilibili-lite/src/manga/detail.styl
@@ -2,27 +2,51 @@
 .title-tooltip
   display none !important
 
+.purchase-panel
+  background-color: var(--c-background) !important
+
 .list-data .list-item.last-read
 .list-data .list-item:hover
+.discount-hinter
+.purchase-panel .action-buttons button.action-button.selected
   background-color var(--c-hover) !important
 
 .header-info .manga-info .season-introduction .size-ruler
   background-color transparent !important
 
 .list-item .short-title
+.purchase-panel .panel-title
   color var(--c-title) !important
+
+.purchase-panel .summary .price .orig
+.purchase-panel .summary .price .final .rmb-price
+  color: var(--c-text) !important
 
 .list-data .list-item.last-read div
 .list-data .list-item:hover div
-.episode-list-component .episode-list .list-header .header-item.selected
+.manga-detail .episode-list-component .episode-list .list-header button.header-item.selected
+.manga-detail .episode-list-component .episode-list .list-header button.header-item:hover
+.purchase-panel .summary .price .final div
   color var(--c-accent) !important
+
+.discount-hinter
+.purchase-panel
+  border-color var(--c-border) !important
 
 .list-data .list-item.last-read
 .list-data .list-item:hover
   border-color var(--c-accent) !important
 
+.purchase-panel .action-buttons .action-button .tag.discount
+  border-radius: 0 0 6px 0
+  background-image: none !important
+  background-color: var(--c-accent) !important
+  color: var(--c-white) !important
+
 .list-item
 .episode-list-component .episode-list .list-header .header-item
+.purchase-panel .action-buttons .action-button
+.purchase-panel .close-button
   border-color var(--c-border) !important
   background-color transparent !important
 
