--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -4,10 +4,13 @@
 .rank-list
   display none !important
 
-.vertical-block-card
 .newbie-awarder .award-dialog .award-dialog-container
 .hot-category
+.section-navigator
   background-color var(--c-background) !important
+
+.vertical-block-card
+  background-color transparent !important
 
 .section-title
 .item-title
