--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -99,6 +99,7 @@ ul.star-wrapper li i
 	color var(--c-text) !important
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
+.bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip
 	color: var(--c-white) !important
 
 .coin-operated-m .coin-title span
@@ -127,6 +128,8 @@ ul.star-wrapper li i.icon-star-full
 .main-container .review-module .review-list .review-item .review-header .review-author.is-vip
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management>:hover
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management>:hover i
+.bui-select.bui-select-quality-menu .bui-select-item.bui-select-item-active span
+.bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-label
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
@@ -185,7 +188,7 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-iconfont:hover .bp-svgicon svg g
 .bilibili-player-video-btn:hover .bp-svgicon svg
 .selection-icon:hover .bp-svgicon svg
-.bilibili-player-video-danmaku-setting:hover .bp-svgicon svg
+.bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-image .bp-svgicon svg
 .bilibili-player-video-danmaku-switch:hover .bp-svgicon svg
 .bilibili-player-video-btn-fullscreen:hover .bp-svgicon svg .st0
 	fill var(--c-accent) !important
