--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -5,6 +5,7 @@
 .pgc-rank .pgc-rank-wrap
 .rank-list .rank-wrap
 .manga-rank .manga-rank-wrap
+.ifmt
 .video-card-common .title .live i
 	display none !important
 
