--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -30,6 +30,8 @@
 .video-list-recom .cinema-recom
 .video-list-video .video-item-biref:nth-child(n+6)
 .bili-tab .bili-tab-item.on:before
+.video-floor-infomation-m .zone-title .headline .link-more
+.video-floor-infomation-m .storey-box .storey-content .spread-module:nth-child(n+16)
 	display none !important
 
 .audio-list .song-list .song-li .content .text
@@ -163,6 +165,9 @@
 .music-article
 	padding-bottom 40px !important
 
+.video-floor-infomation-m .storey-box
+	height auto !important
+
 .charge-header-bg
 	background-image none !important
 
@@ -205,7 +210,8 @@
 .audio-list .song-list
 .promote-m .storey-box
 .hot-recom-module .block-body
-.new-stat-module .storey-box
+.new-stat-module 
+.video-floor-infomation-m .storey-box .storey-content
 .special-recom-module .block-body ul
 .area-module .video-list-video
 .area-module .video-list-movie
@@ -231,6 +237,7 @@
 .promote-m .storey-box .spread-module
 .video-item-biref
 .new-stat-module .storey-box .spread-module
+.video-floor-infomation-m .storey-box .storey-content .spread-module
 .video-item-biref.cinema-large
 	float none
 	flex 18%
