--- a/weibo-lite/src/home/base.styl
+++ b/weibo-lite/src/home/base.styl
@@ -154,13 +154,17 @@ fieldset
 .W_person_info .nameBox .name
 	font-size 20px
 
+.W_checkbox, .W_radio
+	vertical-align: baseline
+
 .S_ficon_dis
 a.S_ficon_dis:hover
 a:hover .S_ficon_dis
+	opacity 1
 	cursor pointer
 
 .W_gotop
-	left 55%
+	left 57%
 	opacity 1
 
 // 个人信息
