--- a/weibo-lite/src/public/background.styl
+++ b/weibo-lite/src/public/background.styl
@@ -5,6 +5,7 @@
 .pc_caldr
 .unlogin_left_nav .lev_layer
 .layer_menu_list_b
+.Bv6_layer .content
   border-color var(--c-border) !important
   border-radius 4px
   background-color var(--c-background) !important
@@ -38,5 +39,7 @@
 .gn_topmenulist_search .W_icon_sc_boil
 .WB_left_nav .lev .W_new_count
 .WB_feed_v3 .WB_media_a .W_icon_tag_v2
+.S_spetxt_bg
+.W_new_count
   background-color var(--c-accent) !important
   color var(--c-white) !important
