--- a/weibo-lite/src/public/base.styl
+++ b/weibo-lite/src/public/base.styl
@@ -49,6 +49,12 @@ hr
 	border-color var(--c-border) !important
 	background-color var(--c-border) !important
 
+select
+	border-color var(--c-border)
+	border-radius 4px
+	background-color var(--c-hover)
+	color var(--c-title) !important
+
 :focus
 	outline-color var(--c-accent)
 
