--- a/weibo-lite/src/public/header.styl
+++ b/weibo-lite/src/public/header.styl
@@ -1,6 +1,6 @@
 // 顶部导航
 .WB_global_nav .gn_nav_list li:nth-child(2)
-.WB_global_nav .gn_nav_list li:nth-child(n+4)
+.WB_global_nav .gn_nav_list li:nth-child(4)
 .WB_global_nav .gn_header::after
 	display none !important
 
