--- a/weibo-lite/src/public/button.styl
+++ b/weibo-lite/src/public/button.styl
@@ -1,10 +1,11 @@
 // button
 .W_gotop
-.W_layer .send_weibo .W_btn_a
 .W_btn_a
-.WB_face .opt .W_btn_b
-.W_btn_a
+.W_btn_b
 .W_btn_c
+.W_btn_d
+.W_btn_e
+.W_btn_big
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -43,6 +44,7 @@
 .W_layer .send_weibo .W_btn_a_disable
 .W_btn_a_disable
 .W_btn_b
+.private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
